[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9"]
build-backend = "setuptools.build_meta"

[project]
name = "captainplanet"
description = "Open-source package for loading environment variables easier and in a Pythonic way"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
]

[tool.pytest.ini_options]
addopts = "--cov=src/environment_variable --cov-report=term:skip-covered"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
respect-gitignore = true
src = ["src"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[dependency-groups]
dev = [
    "ipython",
    "pre-commit",
    "ruff==0.15.2",
    "setuptools_scm>=8.0",
    { include-group = "test" },
]

test = [
    "pytest-cov",
    "pytest>=8",
]

[tool.setuptools_scm]
# Technically unnecessary, but avoids a warning message.
